--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -22,7 +22,7 @@
 
 
 <div class="row">
-  <div class="left-column col-md-6">
+  <div class="col-md-6 left-column">
 
     <div class="panel panel-default"><!-- Où ? -->
       <div class="panel-heading">
@@ -32,6 +32,7 @@
         <p><%= t("infolieu.text") %></p>
       </div>
     </div>
+
 
     <div class="panel panel-default"><!-- Comment ? -->
       <div class="panel-heading">
@@ -45,18 +46,23 @@
       </div>
     </div>
 
+    <div class="panel panel-default"><!-- Quand ? -->
+      <div class="panel-heading">
+        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
+      </div>
+      <div class="panel-body">
+        <p><%= t("infodate.text") %></p>
+      </div>
+    </div>
+
   </div><!-- left column-->
 
 
-  <div class="col-md-6">
+  <div class="col-md-6 right-column">
 
     <div class="panel panel-default google-maps"><!-- Plan -->
       <iframe width="350" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Ar%C3%A8nes%20de%20l'Agora%2C%2091000%20Evry%2C%20France&key=AIzaSyCj5JRiau8OMBTI8Hi6Cysv7Zcdrl0Kb_I"></iframe>
     </div>
-
-  </div>
-
-  <div class="col-md-6">
 
     <div class="panel panel-default"><!-- Combien ? -->
       <div class="panel-heading">
@@ -68,25 +74,12 @@
       </div>
     </div>
 
-  </div>
+  </div> <!-- right column -->
 </div>
 
 
 
 <div class="row">
-
-  <div class="col-md-6">
-
-    <div class="panel panel-default"><!-- Quand ? -->
-      <div class="panel-heading">
-        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
-      </div>
-      <div class="panel-body">
-        <p><%= t("infodate.text") %></p>
-      </div>
-    </div>
-
-  </div>
 
   <div class="col-md-12">
 
