mosaique jeux links

--- a/app/views/static_pages/home/_mosaique_jeu.html.erb
+++ b/app/views/static_pages/home/_mosaique_jeu.html.erb
@@ -1,8 +1,8 @@
 
         <div class="col-md-6 mosaique csgo">
           <div class="panel panel-default jeu">
-            <div class="panel-body">
+            <a class="panel-body" href="/jeux/<%=gametag%>">
               <%= image_tag t("#{gametag}.icon") %>
-            </div>
+            </a>
           </div>
         </div>
