--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -36,30 +36,27 @@
   //height:300px;
   //background-color: #303030;
 }
-.jeu .panel {
+.jeu {
   height: 250px;
 }
-.jeu {
-  .panel-body {
-    padding: 0px;
-  }
-  overflow: hidden;
-}
+
 
 
 .twitter {
-  //height: 350px;
-  //background-color: #505050;
+  padding-bottom: 0px;
   * {
     margin: 0px;
-  }
-}
-.instagram .panel {
-  height: 350px;
-  //background-color: #606060;
-  .panel-body {
     padding: 0px;
   }
+}
+.instagram { 
+  padding-top: 5px;
+  .panel {
+    height: 350px;
+    .panel-body {
+      padding: 0px;
+    }
+  } 
 }
 .billeterie .panel {
   height: 100px;
