--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,7 +35,7 @@
 
       <div class="row">
         <div class="col-md-12 mosaique twitter">
-          <a class="twitter-timeline" href="https://twitter.com/JeSuisUneFouger" data-widget-id="541279807129276418">Tweets de @JeSuisUneFouger</a>
+          <a class="twitter-timeline" href="https://twitter.com/EvryGamesCity" data-widget-id="544111284875440128">Tweets de @EvryGamesCity</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
       </div>
