--- a/app/views/static_pages/home/_mosaique_jeu.html.erb
+++ b/app/views/static_pages/home/_mosaique_jeu.html.erb
@@ -1,7 +1,7 @@
 
         <div class="col-md-6 mosaique csgo">
-          <div class="panel panel-default jeu">
-            <a class="panel-body" href="/jeux/<%=gametag%>">
+          <div class="jeu">
+            <a class="thumbnail" href="/jeux/<%=gametag%>">
               <%= image_tag t("#{gametag}.icon") %>
             </a>
           </div>
