--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,15 +10,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to t('egc.name'), root_path, class: "navbar-brand" %>
+      <%#= link_to t('egc.name'), root_path, class: "navbar-brand" %>
+      <a href="<%=root_path%>">
+        <%= image_tag "LOGO_LONG_BLACK_EGC.png", height: 50 %>
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="<%= set_active("home")%>"><a href="/"><%= t(:home) %></a></li>
+        <li class="<%= set_active("home")%>">
+          <a class="navlink" href="/"><%= t(:home) %></a>
+        </li>
         <li class="dropdown <%= set_active("informations") %>" >
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+          <a href="#" class="dropdown-toggle navlink" data-toggle="dropdown"
                       role="button" aria-expanded="false">
             <%= t(:informations) %><span class="caret"></span>
           </a>
@@ -32,7 +37,7 @@
           </ul>
         </li>
         <li class="dropdown <%= set_active("jeux") %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+          <a href="#" class="dropdown-toggle navlink" data-toggle="dropdown"
                      role="button" aria-expanded="false">
             <%= t(:jeux) %><span class="caret"></span>
           </a>
@@ -48,7 +53,7 @@
           </ul>
         </li>
         <li class="dropdown <%= set_active("contact_egc") || set_active("contact_egs") %>" >
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+          <a href="#" class="dropdown-toggle navlink" data-toggle="dropdown"
                       role="button" aria-expanded="false">
             <%= t(:contact) %><span class="caret"></span>
           </a>
@@ -57,8 +62,12 @@
             <li><%= link_to t('egs.name'), contact_egs_path %></li>
           </ul>
         </li>
-        <li class="<%= set_active("partenaires")%>"><a href="/partenaires"><%= t(:partenaires) %></a></li>
-        <li class="<%= set_active("reglement")%>"><a href="/reglement"><%= t(:reglement) %></a></li>
+        <li class="<%= set_active("partenaires")%>">
+          <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
+        </li>
+        <li class="<%= set_active("reglement")%>">
+          <a class="navlink" href="/reglement"><%= t(:reglement) %></a>
+        </li>
       </ul>
       <!--form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -67,7 +76,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form-->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><%= t(:login) %></a></li>
+        <li><a class="navlink" href="#"><%= t(:login) %></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
