--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -25,6 +25,8 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .navbar-inverse {
+  font-family: 'eurostyle';
+
   background-color: $bleu-gris;
   * { color: white !important; }
 
