--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -3,6 +3,7 @@
 $body-margin: 60px;
 $bleu-gris: #1e2f44;
 $orange: #ea6d2e;
+$lightgrey: #3f3f3f;
 
 body {
   margin-top: $body-margin;
@@ -30,7 +31,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   background-color: $bleu-gris;
   * { color: white !important; }
 
-  li.active a.navlink {
+  .active a.navlink {
     background-color: $orange !important;
   }
 
@@ -39,5 +40,18 @@ h1, .h1, h2, .h2, h3, .h3 {
   }
   .dropdown-menu>li>a:hover {
     background-color: $orange !important;
+  }
+}
+
+.panel-heading {
+  background-color: $orange !important;
+  * { color: white !important;}
+}
+
+.mosaique.infos .panel {
+  color: white;
+  .panel-body {
+    opacity: 0.5;
+    background-color: black !important;
   }
 }
