--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -62,9 +62,16 @@
   height: 100px;
   //background-color: #707070;
 }
-.infos .panel {
-  height: 200px;
-  //background-color: #707070;
+.infos {
+  .panel {
+    height: 200px;
+  }
+  .panel-body {
+    height: 139px;
+    overflow: hidden;
+border-bottom-left-radius: 4px;
+border-bottom-right-radius: 4px;
+  }
 }
 .partenaires .panel {
   height: 150px;
