--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,17 +11,19 @@
         <span class="icon-bar"></span>
       </button>
       <%#= link_to t('egc.name'), root_path, class: "navbar-brand" %>
-      <a href="<%=root_path%>">
-        <%= image_tag "LOGO_LONG_BLACK_EGC.png", height: 50 %>
-      </a>
+      <div class="<%=set_active("home")%>">
+        <a href="<%=root_path%>" class="navlink" style="display:block;">
+          <%= image_tag "LOGO_LONG_BLACK_EGC.png", height: 50 %>
+        </a>
+      </div>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="<%= set_active("home")%>">
-          <a class="navlink" href="/"><%= t(:home) %></a>
-        </li>
+        <!--li class="<%#= set_active("home")%>">
+          <a class="navlink" href="/"><%#= t(:home) %></a>
+        </li-->
         <li class="dropdown <%= set_active("informations") %>" >
           <a href="#" class="dropdown-toggle navlink" data-toggle="dropdown"
                       role="button" aria-expanded="false">
@@ -66,18 +68,12 @@
           <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
         </li>
         <li class="<%= set_active("reglement")%>">
-          <a class="navlink" href="/reglement"><%= t(:reglement) %></a>
+          <a class="navlink" href="/reglement"><%= t(:reglement)%></a>
         </li>
       </ul>
-      <!--form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form-->
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="navlink" href="#"><%= t(:login) %></a></li>
-      </ul>
+      <!--ul class="nav navbar-nav navbar-right">
+        <li><a class="navlink" href="#"><%#= t(:login) %></a></li>
+      </ul-->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </div>
