--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
-  <div class="panel-heading text-center">
+  <div class="panel-body text-center">
     <h1><%= t(:infopratiques) %></h1>
   </div>
 </div>
