--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
       <%#= link_to t('egc.name'), root_path, class: "navbar-brand" %>
       <div class="<%=set_active("home")%>">
         <a href="<%=root_path%>" class="navlink" style="display:block;">
-          <%= image_tag "LOGO_LONG_BLACK_EGC.png", height: 50 %>
+          <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: 50 %>
         </a>
       </div>
     </div>
