--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -10,9 +10,9 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
+      <img src="assets/carousel_1.jpg" alt="...">
       <div class="carousel-caption">
-          <h3>Banane</h3>
+          <h3>Bienvenue sur le site officiel !</h3>
       </div>
     </div>
     <div class="item">
