--- a/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
@@ -3,7 +3,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
       <a href="<%=partenaires_path %>" >
-        <h4><%= t("partenaire-#{i}") %></h4>
+        <%= t("partenaire-#{i}") %>
       </a>
     </div>    
 
