--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-info">
+<!--div class="panel panel-info">
   <div class="panel-body text-center">
-    <h1><%= t(:infopratiques) %></h1>
+    <h1><%#= t(:infopratiques) %></h1>
   </div>
-</div>
+</div-->
 
 
 <div class="panel panel-default"> <!-- Info lan -->
