taille des titres et d'instagram

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -56,6 +56,9 @@
     .panel-body {
       padding: 0px;
     }
+    .panel-heading {
+      font-family: 'eurostyle';
+    }
   } 
 }
 .billeterie .panel {
