--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -44,11 +44,11 @@
         <div class="col-md-12 mosaique instagram">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4>Instagram feed #EGC</h4>
+              <h4>Instagram #EGC2015</h4>
             </div>
             <div class="panel-body">
               <!-- www.intagme.com -->
-              <iframe src="http://www.intagme.com/in/?h=ZWdjfHNsfDMwMHwyfDN8fHllc3w1fHVuZGVmaW5lZHx5ZXM=" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height: 315px" ></iframe>
+              <iframe src="http://www.intagme.com/in/?h=ZWdjMjAxNXxzbHwzMDB8MnwzfHx5ZXN8NXx1bmRlZmluZWR8eWVz" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height: 315px" ></iframe>
             </div>
           </div>
         </div>
