--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -10,6 +10,10 @@ body {
   font-family: 'eurostyle';
 }
 
+.panel-heading {
+  font-family: 'eurostyle-bold';
+}
+
 .container {
   max-width: 970px;
 }
@@ -24,7 +28,6 @@ footer {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   margin-top: 10px;
-  font-family: 'eurostyle-bold';
 }
 
 .navbar-inverse {
