--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 
-<div class="panel panel-default">
+<div class="panel transparent">
 
   <div class="panel-heading">
     <h4 class="contact-presentation-title"><%= t(:presentation) %></h4>
@@ -19,7 +19,7 @@
 </div>
 
 
-<div class="panel panel-default">
+<div class="panel transparent">
 
   <div class="panel-heading">
     <h4 class="contact-lequipe-title"><%= t(:lequipe) %></h4>
@@ -33,7 +33,7 @@
 </div>
 
 
-<div class="panel panel-default">
+<div class="panel transparent">
 
   <div class="panel-heading">
     <h4 class="contact-contact-title"><%= t(:nouscontacter) %></h4>
