--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -1,8 +1,9 @@
 
 
 
+
 <div class="col-md-3 mosaique infos"> 
-  <div class="panel panel-default">
+  <div class="panel transparent">
     <div class="panel-heading">
       <a href="<%=informations_path(anchor: infotag) %>" >
         <h4><%= t("#{infotag}.name") %></h4>
