--- a/app/views/jeux/_jeu_subsection.html.erb
+++ b/app/views/jeux/_jeu_subsection.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel transparent">
   <div class="panel-heading">
     <h4 class=<%= categ %>><%= t(categ) %></h4>
   </div>
