--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -5,17 +5,19 @@
 </div-->
 
 
-<div class="panel panel-default"> <!-- Info lan -->
+<div class="panel transparent"> <!-- Info lan -->
   <div class="panel-heading">
     <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolan} %>
   </div>
-  <div class="panel-body row">
-    <div class="col-md-2">
-      <%= image_tag 'affiche.jpg', width: 135 %>
-    </div>
-    <div class="col-md-10">
-      <p><%= t("infolan.text") %></p>
-      <p><%= t("infolan.text2") %> </p>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-3">
+        <%= image_tag 'EGC_MASTER.jpg', width: 200 %>
+      </div>
+      <div class="col-md-9">
+        <p><%= t("infolan.text") %></p>
+        <p><%= t("infolan.text2") %> </p>
+      </div>
     </div>
   </div>
 </div>
@@ -24,7 +26,7 @@
 <div class="row">
   <div class="col-md-6 left-column">
 
-    <div class="panel panel-default"><!-- Où ? -->
+    <div class="panel transparent"><!-- Où ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infolieu} %>
       </div>
@@ -34,7 +36,7 @@
     </div>
 
 
-    <div class="panel panel-default"><!-- Comment ? -->
+    <div class="panel transparent"><!-- Comment ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infomoyen} %>
       </div>
@@ -46,7 +48,7 @@
       </div>
     </div>
 
-    <div class="panel panel-default"><!-- Quand ? -->
+    <div class="panel transparent"><!-- Quand ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infodate} %>
       </div>
@@ -64,7 +66,7 @@
       <iframe width="350" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Ar%C3%A8nes%20de%20l'Agora%2C%2091000%20Evry%2C%20France&key=AIzaSyCj5JRiau8OMBTI8Hi6Cysv7Zcdrl0Kb_I"></iframe>
     </div>
 
-    <div class="panel panel-default"><!-- Combien ? -->
+    <div class="panel transparent"><!-- Combien ? -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoprix} %>
       </div>
@@ -83,7 +85,7 @@
 
   <div class="col-md-12">
 
-    <div class="panel panel-default"><!-- Services -->
+    <div class="panel transparent"><!-- Services -->
       <div class="panel-heading">
         <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoservice} %>
       </div>
