--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -8,6 +8,9 @@ $lightgrey: #3f3f3f;
 body {
   margin-top: $body-margin;
   font-family: 'eurostyle';
+  background-image: url("EGC_MASTER_NOLOGOS.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
