--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -10,7 +10,8 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="assets/carousel_1.jpg" alt="...">
+      <!--img src="assets/carousel_1.jpg" alt="..."-->
+      <%= image_tag "carousel_1.jpg", alt: "..." %>
       <div class="carousel-caption">
           <h3>Bienvenue sur le site officiel !</h3>
       </div>
