--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -12,7 +12,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag 'EGC_MASTER.jpg', width: 200 %>
+        <%= image_tag 'EGC_MASTER-mini.jpg', width: 200 %>
       </div>
       <div class="col-md-9">
         <p><%= t("infolan.text") %></p>
