image-url for background

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -8,7 +8,7 @@ $lightgrey: #3f3f3f;
 body {
   margin-top: $body-margin;
   font-family: 'eurostyle';
-  background-image: asset-url("EGC_MASTER_NOLOGOS.jpg");
+  background-image: image-url("EGC_MASTER_NOLOGOS.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
