--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -8,3 +8,9 @@
   font-family: 'eurostyle-bold';
   src: font-url('Eurostile_LT_Bold_Extended_2.ttf') format('truetype');
 }
+
+
+@font-face {
+  font-family: 'bebas';
+  src: font-url('BebasNeue.otf') format('opentype');
+}
