--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -8,9 +8,10 @@ $lightgrey: #3f3f3f;
 body {
   margin-top: $body-margin;
   font-family: 'eurostyle';
-  background-image: image-url("EGC_MASTER_NOLOGOS_web.jpg");
+  background-image: image-url("Site_EGC_Background2_copy.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container {
