--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
   <div class="row">
-    <div class="col-md-12 mosaique" id="banniere">
-      <div class="panel panel-default"><div class="panel-body">banniere</div></div>
+    <div class="col-md-12" id="banniere">
+      <%= image_tag "Header_Home.png" %>
     </div>
   </div>
 
