--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -15,12 +15,8 @@
    }
 }
 
-#banniere .panel {
-  height: 200px;
-}
-
 .jeu {
-  height: 250px;
+  //height: 250px;
 }
 
 .twitter {
@@ -41,10 +37,6 @@
       font-family: 'eurostyle';
     }
   } 
-}
-
-.billeterie .panel {
-  height: 100px;
 }
 
 .mosaique.infos .panel {
