--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
   <div class="row">
-    <div class="col-md-12" id="banniere">
-      <%= image_tag "Header_Home.png" %>
+    <div class="col-md-12">
+      <%= image_tag "Header_Home.png", class: "img-responsive" %>
     </div>
   </div>
 
@@ -28,8 +28,8 @@
     <div class="col-md-4" id="right-mosaique">
       
       <div class="row">
-        <div class="col-md-12 mosaique billeterie">
-          <div class="panel panel-default"><div class="panel-body">Billeterie</div></div>
+        <div class="col-md-12 mosaique">
+          <%= image_tag "Site_EGC_Billeterie.jpg" %>
         </div>
       </div>
 
