--- a/app/views/static_pages/home/_mosaique_jeu.html.erb
+++ b/app/views/static_pages/home/_mosaique_jeu.html.erb
@@ -1,7 +1,7 @@
 
         <div class="col-md-6 mosaique csgo">
           <div class="jeu">
-            <a class="thumbnail" href="/jeux/<%=gametag%>">
+            <a class="" href="/jeux/<%=gametag%>">
               <%= image_tag t("#{gametag}.icon") %>
             </a>
           </div>
