--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -3,12 +3,19 @@
 
 
 <div class="col-md-3 mosaique infos"> 
+
+
   <div class="panel transparent">
     <div class="panel-heading">
-      <a href="<%=informations_path(anchor: infotag) %>" >
         <h4><%= t("#{infotag}.name") %></h4>
-      </a>
-    </div>    
-    <div class="panel-body"><%= t("#{infotag}.mosaique-text") %></div>
+    </div>
+
+    <a href="<%=informations_path(anchor: infotag) %>" title="<%= t("#{infotag}.mosaique-text") %>">
+      <div class="panel-body">
+        
+        <%= image_tag t("#{infotag}.logo"), class: "infologo-center" %>
+      </div>
+    </a>
   </div>
+
 </div>
