--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,7 @@
       
       <div class="row">
         <div class="col-md-12 mosaique">
-          <%= image_tag "Site_EGC_Billeterie.jpg" %>
+          <%= image_tag "Site_EGC_Billeterie.jpg", class: "center-block" %>
         </div>
       </div>
 
