--- a/app/views/static_pages/home/_mosaique_jeu.html.erb
+++ b/app/views/static_pages/home/_mosaique_jeu.html.erb
@@ -1,8 +1,8 @@
 
-        <div class="col-md-6 mosaique csgo">
+        <div class="col-md-6 mosaique">
           <div class="jeu">
             <a class="" href="/jeux/<%=gametag%>">
-              <%= image_tag t("#{gametag}.icon") %>
+              <%= image_tag t("#{gametag}.icon"), class: "center-block" %>
             </a>
           </div>
         </div>
