--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -4,6 +4,7 @@
   </div>
 </div-->
 
+<div class="row">
 
 <div class="panel transparent"> <!-- Info lan -->
   <div class="panel-heading">
@@ -22,6 +23,7 @@
   </div>
 </div>
 
+</div><!-- row -->
 
 <div class="row">
   <div class="col-md-6 left-column">
