facebook & twitter navlinks

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -43,6 +43,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     background-color: $orange !important;
   }
 
+  .navlink { height: 50px; }
+
   .dropdown-menu {
     background-color: $bleu-gris;
   }
