--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,9 +71,20 @@
           <a class="navlink" href="/reglement"><%= t(:reglement)%></a>
         </li>
       </ul>
-      <!--ul class="nav navbar-nav navbar-right">
-        <li><a class="navlink" href="#"><%#= t(:login) %></a></li>
-      </ul-->
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a class="navlink" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740">
+            <%= image_tag "Facebook_Menu_icon_1.png" %>
+          </a>
+        </li>
+        <li>
+          <a class="navlink" href="https://twitter.com/EvryGamesCity">
+            <%= image_tag "Twitter_Menu_icon_1.png" %>
+          </a>
+        </li>
+      </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </div>
