trasnparent sur les titres de pages

--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -1,5 +1,5 @@
 
-<div class="panel panel-info">
+<div class="panel transparent">
   <div class="panel-body text-center">
     <h1 class="contact-title"><%= t("#{contacttag}.name") %> </h1>
   </div>
