--- a/app/views/static_pages/reglement.html.erb
+++ b/app/views/static_pages/reglement.html.erb
@@ -1,5 +1,5 @@
 
-<div class="panel panel-info">
+<div class="panel transparent">
   <div class="panel-body text-center">
     <h1><%= t(:reglement) %></h1>
   </div>
