--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -51,6 +51,7 @@
   border-color: white;
   .social-links {
     margin-top: 5px;
+    .social-link { float: right; }
   }
   .middle-home-footer {
     border-left: 2px solid #eaeaea;
