--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="row">
-        <div class="col-md-12 mosaique twitter">
+        <div class="col-md-12 mosaique twitter center-block">
           <a class="twitter-timeline" href="https://twitter.com/EvryGamesCity" data-widget-id="544111284875440128">Tweets de @EvryGamesCity</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
@@ -90,13 +90,13 @@
             <small>Retrouvez le meilleur de notre communauté</small>
           </div>
           <div class="col-md-4 row social-links">
-            <div class="col-md-6">
-              <a class="navlink" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740">
+            <div class="col-md-6 social-link">
+              <a href="https://www.facebook.com/pages/Evry-Games-City/744555588972740">
                 <%= image_tag "Facebook_Menu_icon_1.png" %>
               </a>
             </div>
-            <div class="col-md-6">
-              <a class="navlink" href="https://twitter.com/EvryGamesCity">
+            <div class="col-md-6 social-link">
+              <a href="https://twitter.com/EvryGamesCity">
                 <%= image_tag "Twitter_Menu_icon_1.png" %>
               </a>
             </div>
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 middle-home-footer">
+    <div class="col-md-4 hidden-xs middle-home-footer">
 
 
     </div>
