--- a/app/views/static_pages/home/_mosaique_jeu.html.erb
+++ b/app/views/static_pages/home/_mosaique_jeu.html.erb
@@ -1,5 +1,5 @@
 
-        <div class="col-md-6 mosaique">
+        <div class="col-md-6 col-sm-6 mosaique">
           <div class="jeu">
             <a class="" href="/jeux/<%=gametag%>">
               <%= image_tag t("#{gametag}.icon"), class: "center-block" %>
