--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -2,11 +2,11 @@
 
 
 
-<div class="col-md-3 mosaique infos"> 
+<div class="col-md-3 col-sm-6 mosaique infos"> 
 
 
   <div class="panel transparent">
-    <div class="panel-heading">
+    <div class="panel-heading text-center">
         <h4><%= t("#{infotag}.name") %></h4>
     </div>
 
