--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -11,21 +11,21 @@
   <div class="carousel-inner">
     <div class="item active">
       <!--img src="assets/carousel_1.jpg" alt="..."-->
-      <%= image_tag "carousel_1.jpg", alt: "..." %>
+      <%= image_tag "SlideShow_EGC_1.jpg", alt: "..." %>
       <div class="carousel-caption">
           <h3>Bienvenue sur le site officiel !</h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
+      <%= image_tag "SlideShow_EGC_2.jpg", alt: "..." %>
       <div class="carousel-caption">
-          <h3>Encore banane</h3>
+          <h3></h3>
       </div>
     </div>
     <div class="item">
-      <img src="http://freethinker.co.uk/images/uploads/2009/11/big-banana-620x300.jpg" alt="...">
+      <%= image_tag "SlideShow_EGC_3.jpg", alt: "..." %>
       <div class="carousel-caption">
-          <h3>Toujours banane</h3>
+          <h3></h3>
       </div>
     </div>
   </div>
