--- a/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
@@ -1,9 +1,9 @@
 
 <div class="col-md-2 mosaique partenaire"> 
-  <div class="panel panel-default">
+  <div class="panel transparent">
     <div class="panel-body">
-      <a href="<%=partenaires_path %>" >
-        <%= t("partenaire-#{i}") %>
+      <a href="<%= t("partenaire-#{i}.url") %>" >
+        <%= image_tag t("partenaire-#{i}.image"), class: "center-block" %>
       </a>
     </div>    
 
