instagram logo + newtablinks

--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -7,7 +7,7 @@
 
   <div class="panel transparent">
     <div class="panel-heading text-center">
-        <h4><%= t("#{infotag}.name") %></h4>
+        <h4><%= t("#{infotag}.name").upcase %></h4>
     </div>
 
     <a href="<%=informations_path(anchor: infotag) %>" title="<%= t("#{infotag}.mosaique-text") %>">
