--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,13 +74,18 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="navlink" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740">
+          <a class="navlink" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
             <%= image_tag "Facebook_Menu_icon_1.png" %>
           </a>
         </li>
         <li>
-          <a class="navlink" href="https://twitter.com/EvryGamesCity">
+          <a class="navlink" href="https://twitter.com/EvryGamesCity" target="_blank">
             <%= image_tag "Twitter_Menu_icon_1.png" %>
+          </a>
+        </li>
+        <li>
+          <a class="navlink" href="https://instagram.com/EvryGamesCity" target="_blank">
+            <%= image_tag "Instagram_Menu_icon_1.png" %>
           </a>
         </li>
       </ul>
