--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -92,14 +92,19 @@
             <small>Retrouvez le meilleur de notre communauté</small>
           </div>
           <div class="col-md-4 row social-links">
-            <div class="col-md-6 social-link">
-              <a href="https://www.facebook.com/pages/Evry-Games-City/744555588972740">
+            <div class="col-md-4 social-link">
+              <a href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
                 <%= image_tag "Facebook_Menu_icon_1.png" %>
               </a>
             </div>
-            <div class="col-md-6 social-link">
-              <a href="https://twitter.com/EvryGamesCity">
+            <div class="col-md-4 social-link">
+              <a href="https://twitter.com/EvryGamesCity" target="_blank">
                 <%= image_tag "Twitter_Menu_icon_1.png" %>
+              </a>
+            </div>
+            <div class="col-md-4 social-link">
+              <a href="https://instagram.com/EvryGamesCity" target="_blank">
+                <%= image_tag "Instagram_Menu_icon_1.png" %>
               </a>
             </div>
           </div>
