--- a/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
@@ -2,8 +2,8 @@
 <div class="col-md-2 mosaique partenaire"> 
   <div class="panel transparent">
     <div class="panel-body">
-      <a href="<%= t("partenaire-#{i}.url") %>" >
-        <%= image_tag t("partenaire-#{i}.image"), class: "center-block" %>
+      <a href="<%= t("partenaire-#{i}.url") %>" target="_blank">
+        <%= image_tag t("partenaire-#{i}.image"), class: "center-block", alt: t("partenaire-#{i}.name") %>
       </a>
     </div>    
 
