--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -74,17 +74,17 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="navlink" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
+          <a class="fb-icon hover" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
             <%= image_tag "Facebook_Menu_icon_1.png" %>
           </a>
         </li>
         <li>
-          <a class="navlink" href="https://twitter.com/EvryGamesCity" target="_blank">
+          <a class="tw-icon hover" href="https://twitter.com/EvryGamesCity" target="_blank">
             <%= image_tag "Twitter_Menu_icon_1.png" %>
           </a>
         </li>
         <li>
-          <a class="navlink" href="https://instagram.com/EvryGamesCity" target="_blank">
+          <a class="igm-icon hover" href="https://instagram.com/EvryGamesCity" target="_blank">
             <%= image_tag "Instagram_Menu_icon_1.png" %>
           </a>
         </li>
