--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -72,7 +72,9 @@
         </li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
+
+
+      <ul class="nav navbar-nav navbar-right hidden-xs">
         <li>
           <a class="fb-icon hover" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
             <%= image_tag "Facebook_Menu_icon_1.png" %>
@@ -89,6 +91,8 @@
           </a>
         </li>
       </ul>
+
+
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
