--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -12,7 +12,7 @@
     <div class="item active">
       <!--img src="assets/carousel_1.jpg" alt="..."-->
       <%= image_tag "SlideShow_EGC_1.jpg", alt: "..." %>
-      <div class="carousel-caption">
+      <div class="carousel-caption bold">
           <h3>Bienvenue sur le site officiel !</h3>
       </div>
     </div>
