--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -84,6 +84,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   display:block;
 }
 
-.fb-icon.hover { background-image: image-url("Facebook_Menu_icon_2.png"); }
-.tw-icon.hover { background-image: image-url("Twitter_Menu_icon_2.png"); }
-.igm-icon.hover { background-image: image-url("Instagram_Menu_icon_2.png"); }
+.fb-icon.hover:hover { background-image: image-url("Facebook_Menu_icon_2.png"); }
+.tw-icon.hover:hover { background-image: image-url("Twitter_Menu_icon_2.png"); }
+.igm-icon.hover:hover { background-image: image-url("Instagram_Menu_icon_2.png"); }
