--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -80,17 +80,20 @@
       <ul class="nav navbar-nav navbar-right hidden-xs">
         <li>
           <a class="fb-icon hover" href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank">
-            <%= image_tag "Facebook_Menu_icon_1.png" %>
+            <%= image_tag "Facebook_Menu_icon_1.png", class: "white-icon" %>
+            <%= image_tag "Facebook_Menu_icon_2.png", class: "orange-icon" %>
           </a>
         </li>
         <li>
           <a class="tw-icon hover" href="https://twitter.com/EvryGamesCity" target="_blank">
-            <%= image_tag "Twitter_Menu_icon_1.png" %>
+            <%= image_tag "Twitter_Menu_icon_1.png", class: "white-icon" %>
+            <%= image_tag "Twitter_Menu_icon_2.png", class: "orange-icon" %>
           </a>
         </li>
         <li>
           <a class="igm-icon hover" href="https://instagram.com/EvryGamesCity" target="_blank">
-            <%= image_tag "Instagram_Menu_icon_1.png" %>
+            <%= image_tag "Instagram_Menu_icon_1.png", class: "white-icon" %>
+            <%= image_tag "Instagram_Menu_icon_2.png", class: "orange-icon" %>
           </a>
         </li>
       </ul>
