--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -94,17 +94,20 @@
           <div class="col-md-4 row social-links">
             <div class="social-link">
               <a href="https://www.facebook.com/pages/Evry-Games-City/744555588972740" target="_blank" class="fb-icon hover">
-                <%= image_tag "Facebook_Menu_icon_1.png" %>
+                <%= image_tag "Facebook_Menu_icon_1.png", class: "white-icon" %>
+                <%= image_tag "Facebook_Menu_icon_2.png", class: "orange-icon" %>
               </a>
             </div>
             <div class="social-link">
               <a href="https://twitter.com/EvryGamesCity" target="_blank" class="tw-icon hover">
-                <%= image_tag "Twitter_Menu_icon_1.png" %>
+                <%= image_tag "Twitter_Menu_icon_1.png", class: "white-icon" %>
+                <%= image_tag "Twitter_Menu_icon_2.png", class: "orange-icon" %>
               </a>
             </div>
             <div class="social-link">
               <a href="https://instagram.com/EvryGamesCity" target="_blank" class="igm-icon hover">
-                <%= image_tag "Instagram_Menu_icon_1.png" %>
+                <%= image_tag "Instagram_Menu_icon_1.png", class: "white-icon" %>
+                <%= image_tag "Instagram_Menu_icon_2.png", class: "orange-icon" %>
               </a>
             </div>
           </div>
