debut plan du site

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -26,9 +26,16 @@ body {
 
 footer {
   .container {
+    margin-bottom: 50px;
     margin-top: 10px;
+    padding-top: 10px;
+
     border-top: 2px solid #eaeaea;
     color: #707070;
+    * { margin-right: 20px; }
+    a:hover, a:link, a:visited, a:active { color: white; }
+    
+    td.ml { margin-left: 10px !important; }
   }
 }
 
