--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
-<footer class="footer">
+<footer class="footer text-center">
   <div class="container">
-   <small>© Caillou Apps</small>
+    <%= link_to "Contact", contact_egc_path %>
+    <span> - </span> 
+    <%= link_to "Plan du site", plan_du_site_path %>
   </div>
 </footer>
