--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -29,7 +29,7 @@
     .panel-body {
       padding: 0px;
     }
-    .panel-heading {
+    .panel-heading h4 {
       font-family: 'eurostyle';
     }
   } 
